# struct-metadata

./: Cargo.toml  readme.md
struct-metadata/: Cargo.toml
struct-metadata-derive/: Cargo.toml
struct-metadata-derive/src/: lib.rs
struct-metadata-derive/tests/: containers.rs  custom.rs  simple.rs
struct-metadata/src/: lib.rs
struct-metadata/tests/: alias.rs  containers.rs  custom.rs  default.rs  enums.rs  propagation.rs  serde.rs  simple.rs
validation-boilerplate/: Cargo.toml  readme.md
validation-boilerplate-derive/: Cargo.toml
validation-boilerplate-derive/src/: lib.rs
validation-boilerplate/src/: lib.rs
validation-boilerplate/tests/: borrow_inside.rs  borrow_other.rs  simple.rs  tuple.rs  vector.rs
