[package]
name = "struct-metadata-derive"
version = "0.1.0"
edition = "2021"
licence = "MIT"
categories = ["rust-patterns", "config"]
description = "Derive macro for the struct-metadata package."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
struct-metadata = { version = "0", path = "../struct-metadata" }
