[package]
name = "struct-metadata-derive"
version = "1.0.2"
edition = "2021"
license = "MIT"
categories = ["rust-patterns", "config"]
description = "Derive macro for the struct-metadata package."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
convert_case = "0.7"
