[package]
name = "struct-metadata"
version = "0.1.1"
edition = "2021"
license = "MIT"
categories = ["rust-patterns", "config"]
description = "Macros for attaching metadata to structs."


[dependencies]
struct-metadata-derive = { version = "0.1.0" }
chrono = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["std", "chrono"]
std = []
chrono = ["dep:chrono"]
serde_json = ["dep:serde_json"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
