[package]
name = "struct-metadata"
version = "0.3.0"
edition = "2021"
license = "MIT"
categories = ["rust-patterns", "config"]
description = "Macros for attaching metadata to structs."

[dependencies]
struct-metadata-derive = { version = "0.3.0", path = "../struct-metadata-derive" }
chrono = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["std", "chrono"]
std = []
chrono = ["dep:chrono"]
serde_json = ["dep:serde_json"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
