[package]
name = "validation-boilerplate-derive"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/adam-douglass/struct-metadata/"
description = "derive macros for the validation-boilerplate crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
