[package]
name = "validation-boilerplate"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/adam-douglass/struct-metadata/"
description = "Utility for generating boilerplate for types that require runtime validation whenever they are loaded."
readme = "readme.md"

[dependencies]
validation-boilerplate-derive = { version = "0.1.0", path = "../validation-boilerplate-derive" }
#chrono = { version = "0.4", optional = true }
#serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = [] }

[features]
#default = ["std", "chrono"]
#std = []
#chrono = ["dep:chrono"]
#serde_json = ["dep:serde_json"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
thiserror = "*"