[package]
name = "validation-boilerplate"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/adam-douglass/struct-metadata/"
description = "Utility for generating boilerplate for types that require runtime validation whenever they are loaded."
readme = "readme.md"

[dependencies]
validation-boilerplate-derive = { version = "0.1.0", path = "../validation-boilerplate-derive" }
serde = { version = "1.0", features = [] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"